--- a/FLX_homework_19/homework/package.json
+++ b/FLX_homework_19/homework/package.json
@@ -19,7 +19,7 @@
     "gulp-cli": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-image": "^4.4.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
